Support benchmarking of full planning pipelines (#1531)
... instead of planning plugins only

--- a/moveit_ros/benchmarks/examples/demo1.yaml
+++ b/moveit_ros/benchmarks/examples/demo1.yaml
@@ -18,8 +18,8 @@ benchmark_config:
         output_directory: /tmp/moveit_benchmarks/
         queries: Pick1
         start_states: Start1
-    planners:
-        - plugin: ompl_interface/OMPLPlanner
+    planning_pipelines:
+        - name: ompl
           planners:
             - RRTConnectkConfigDefault
             - BKPIECEkConfigDefault
